2003-03-11 Caleb Tennis <caleb@aei-tech.com>
	* added library version number support for QMake project

2003-03-10 Caleb Tennis <caleb@aei-tech.com>
	* added "staticlib" support for QMake projects 

2003-03-09 Roberto Raggi <roberto@kdevelop.org>
	* added back/forward actions for the documentation browser

2003-03-07 Alexander Dymo <cloudtemple@mksat.net>
    * New configuration options for the documentation browser.
      It is now capable of using any doxygen and kdoc documentation,
      not only kdelibs documentation.

2003-03-07 F@lk Brettschneider <falkbr@kdevelop.org>
	* added third level called "Very short compiler output"
	* now you can switch between the output versions without recompiling

2003-03-06 Stephane ANCELOT <sancelot@free.fr>
	* enhanced grepview, there is no need to display the filename in each line

2003-03-06 Roberto Raggi <roberto@kdevelop.org>
	* Added support for tmake projects
	* Added template for QTopia 1.6

2003-03-05 Alexander Dymo <cloudtemple@mksat.net>
    * Documentation browser is now able to handle all Qt documentation including
      custom *.xml documentation. Configuration options are also available.
    * GTK tocs renamed to GNOME 1.0 API Reference. Incorrect links fixed, Bonobo
      chapter included. More to come.
    * Started adding W3C TR tocs to the documentation browser.

2003-03-02 F@lk Brettschneider <falkbr@kdevelop.org>
	* completed the new behaviour of the make-output view
	  (can be configured via contextmenu or Gideon settings dialog)

2003-03-01  Roberto Raggi <roberto@kdevelop.org>
	* added javahello template to appwizard

2003-02-28  Roberto Raggi <roberto@kdevelop.org>
	* reenabled java support
	* removed obsolete kdevelop java plugin template

2003-02-27  Victor Rder  <victor_roeder@gmx.de>
* Started to restructure the Autoproject part
	-> Splitted AutoProjectWidget in
	   * AutoSubprojectView
	   * AutoDetailsView
	   * AutoListViewItems
	   * AutomakeManager (not finished)
	-> More to come